--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  gap: 1.5rem;
+  gap: 2rem;
   padding: 0 1rem;
   margin-bottom: 5rem;
 }
