--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+html,
+body {
+  height: 100vh;
+}
+
 body {
   margin: 0;
   background-color: #001220;
